html kismini doldurdum

--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suit-Up</title>
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,400;1,200&family=Open+Sans:ital,wght@0,300;1,300&family=Raleway:ital,wght@1,100&family=Rubik+Scribble&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="homepage-header-container">
+      <div class="header-box">
+        <nav class="header-navbar">
+          <img class="header-logo" src="" alt="" />
+          <ul class="navbar-lists">
+            <li><a href="#">Tour</a></li>
+            <li><a href="#">Prices</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">F.A.Q</a></li>
+            <li><a href="#">Support</a></li>
+          </ul>
+          <button>buy38$</button>
+        </nav>
+        <div>
+          <h1>Suit Up Your Startup</h1>
+          <p>
+            We have created a new product that will help designers,developers
+            and companies create websites for their startups quickly and easily.
+          </p>
+        </div>
+        <div>
+          <div class="card card-border">
+            <img src="images/fa-gears.png" alt="" />
+            <h5>Based on Bootstrap 4</h5>
+            <p>
+              HTML layout is based on one of the most common and reliable
+              framework-Bootsrapt.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/fa-html5.png" alt="HTML LOGO" />
+            <h5>HTML5 & CSS3</h5>
+            <p>We used only time-tested technologies for the best results.</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="images/Macbook Pro@2x.png" alt="Mac" />
+      </div>
+    </div>
+  </body>
 </html>
